--- a/front/package.json
+++ b/front/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^6.5.1",
+    "aos": "^2.3.4",
     "bootstrap-icons": "^1.11.3",
     "dom": "^0.0.3",
     "react": "^18.2.0",
