Descripción de los cambios realizados

--- a/front/package.json
+++ b/front/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^6.5.1",
     "aos": "^2.3.4",
+    "axios": "^1.7.2",
     "bootstrap-icons": "^1.11.3",
     "dom": "^0.0.3",
     "react": "^18.2.0",
@@ -29,6 +30,6 @@
     "eslint-plugin-react": "^7.33.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.5",
-    "vite": "^5.2.10"
+    "vite": "^5.3.5"
   }
 }
