--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "dependencies": {
     "bootstrap": "^5.3.2",
     "bootstrap-icons": "^1.11.3",
+    "express-fileupload": "^1.5.1",
     "react-bootstrap": "^2.10.0",
     "vite": "^5.2.11"
   }
