--- a/package.json
+++ b/package.json
@@ -1,9 +1,15 @@
 {
+  "scripts": {
+    "dev": "concurrently \"npm run dev --prefix front\" \"npm run dev --prefix back\""
+  },
   "dependencies": {
     "bootstrap": "^5.3.2",
     "bootstrap-icons": "^1.11.3",
     "express-fileupload": "^1.5.1",
     "react-bootstrap": "^2.10.0",
     "vite": "^5.2.11"
+  },
+  "devDependencies": {
+    "concurrently": "^8.2.2"
   }
 }
