--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "bootstrap-icons": "^1.11.3",
     "express-fileupload": "^1.5.1",
     "react-bootstrap": "^2.10.0",
+    "uuid": "^10.0.0",
     "vite": "^5.2.11"
   },
   "devDependencies": {
