--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "vite": "^5.2.11"
   },
   "devDependencies": {
-    "concurrently": "^8.2.2"
+    "concurrently": "^8.2.2",
+    "jsdoc": "^4.0.3"
   }
 }
